--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -703,13 +703,17 @@ $hoverLine: 2px;
           }
           &:focus {
             outline-color: rgba(102, 78, 249, 0.8);
+            
             background: rgba(102, 78, 249, 0.05);;
           }
     }
 }
 .authInput {
 
-    width: 306px;
+    //width: 306px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: calc(100% - 40px);
     height: 50px;
     border-radius: 30px;
     background: #F7F7F7;
@@ -722,19 +726,14 @@ $hoverLine: 2px;
         width: calc(260px - 4px);
       }
     }
-    &.wrong {
-      border: 1px solid #EB5757;
-       height: calc(50px - 2px);
-       width: calc(306px - 2px);
-    }
+
     //border: 1px solid #EB5757;
     &_icon {
       width: 20px;
       height: 20px;
-      margin-left: 20px;
+      //margin-left: 20px;
       margin-right: 15px;
       
-
       svg {
         width: inherit;
         height: inherit;
@@ -748,8 +747,8 @@ $hoverLine: 2px;
     &_alert {
       width: 20px;
       height: 20px;
-      margin-left: 20px;
-      margin-right: 15px;
+      //margin-left: 20px;
+      //margin-right: 15px;
       display: none;
 
       &.wrong {
@@ -817,13 +816,32 @@ $hoverLine: 2px;
        background: #FFFFFF;
        border: 2px solid rgba(78, 100, 249, 0.8);
        height: calc(50px - 4px);
-       width: calc(306px - 4px);
-       
+        justify-content: center;
+        padding-left: 18px;
+        padding-right: 18px;
+       //width: calc(306px - 4px);
+       width: calc(100% - 44px);
        path {
           opacity: 1;
           fill: #664EF9;
        }
      }
+
+     &.wrong {
+      border: 2px solid #EB5757; 
+        padding-left: 18px;
+        padding-right: 18px;
+       height: calc(50px - 4px);
+       //width: calc(306px - 4px); 
+       width: calc(100% - 44px);
+       path {
+        opacity: 1;
+        fill: #EB5757;
+     }
+       &:hover {
+
+       }  
+    }
 }
 
 .searchInput {
