register page 1.1 submit page: added redirect and adaptive

--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -173,7 +173,12 @@ $hoverLine: 2px;
     @include centringMixin;
     font-size: 16px;
     line-height: 24px;
-
+    &:disabled {
+      background-color: #bdbdbd;
+      &:hover {
+        background-color: #a0a0a0;
+      }
+    }
     path {
       fill: black;
     }
