--- a/src/views/pages/submit.pug
+++ b/src/views/pages/submit.pug
@@ -14,4 +14,5 @@ block content
                             .submit_content_form_innerContent_auth_title Подтвердите регистрацию
                             .submit_content_form_innerContent_auth_description Письмо для подтверждения аккаунта отправлено почту. Перейдите по ссылке, указанной в письме. Если письма нет, то проверьте спам.
                             .submit_content_form_innerContent_auth_button
-                                +stdBtn({text: 'Понятно', cls: 'primary', color: 'authBtn ', textAlign: 'center',width: '117px'})
+                                a(href="/index.html") 
+                                    +stdBtn({text: 'Понятно', cls: 'primary', color: 'authBtn ', textAlign: 'center',width: '117px'})
