contact page 1.0: added adaptive and message func

--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -178,7 +178,7 @@ mixin searchInput(vars)
 
 mixin stdTextArea(vars)
     .stdTextArea(class=vars.cls)
-        textarea(name=vars.name placeholder = vars.placeholder)  
+        textarea(name=vars.name placeholder = vars.placeholder id = vars.id)  
 //- circle button
 mixin circleBtn(vars)
     .circleBtn(class=`${vars.cls ? vars.cls : 'primary'} ${vars.color ? vars.color : 'white'}` id = vars.id)
