newspage 1.0: added adaptive and pagination functional

--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -172,7 +172,7 @@ mixin searchInput(vars)
         style={gap: `${vars.gap ? vars.gap : '5px'}`, 'flex-direction': `${iconPlace ? place : 'left'}`})
 
         .searchInput_button
-            button(class = vars.color)
+            button(class = vars.color id = `${vars.id}_button`)
                 include ../../assets/images/searchImg.svg
 
 
