--- a/src/views/pages/cathalog.pug
+++ b/src/views/pages/cathalog.pug
@@ -10,7 +10,8 @@ block content
     .content_container
         include ../../components/searchBlock/searchBlockCathalogComponent.pug
         include ../../components/searchBlock/searchBlockCathalogFilterComponent.pug
+        include ../../components/map/mapComponent.pug
         include ../../components/rentsBlock/cardsBlockCathalogComponent.pug
-
+        
         include ../../components/servicesBlock/servicesBlockCathalogComponent.pug
         
